fix: changed overflow styles from scroll to auto (#13)
* fix: changed overflow styles from scroll to auto

* chore: removed non-existent check prettier

* chore: fixed stylelint errors

* chore: fixed tscheck error

--- a/src/common/components/button-primary/styles.module.scss
+++ b/src/common/components/button-primary/styles.module.scss
@@ -28,13 +28,13 @@
     }
   }
 
-  &[data-kind="transparent"] {
-    cursor: pointer;
-    border: none;
-    display: flex;
-    justify-content: center;
+  &[data-kind='transparent'] {
     align-items: center;
     background: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
     padding: 3px;
   }
 }
